# GUI_Spotlight

./: .gitignore  LICENSE  README.md  inference.py  nohup.out  osworld_g_evaluation.py  pyproject.toml  screenspot_pro_evaluation.py  uivision_evaluation.py
spotlight/: parser.py  tools.py
spotlight/reward/: rubric.py  tool_rubric.py
spotlight/tools_envs/: environment.py  multiturn_env.py  tool_env.py
