[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GUI_Spotlight"
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

dependencies = [
    "torch==2.6.0",
    "vllm>=0.8.5.post1",
]

[tool.setuptools]
packages = ["agenttrain"]
